# cherris

./: Cargo.toml  perf.data  perf.data.old  test.perf
.github/workflows/: ci.yml
cherris-core/: Cargo.toml
cherris-core/benches/: perft.rs
cherris-core/src/: attacks.rs  bitboard.rs  board.rs  castling_rights.rs  chess_move.rs  color.rs  divide.rs  error.rs  file.rs  game.rs  game_action.rs  lib.rs  main.rs  move_generator.rs  move_list.rs  perft.rs  piece.rs  position.rs  rank.rs  rays.rs  role.rs  square.rs  uci.rs  zobrist.rs
cherris-core/src/game/: game_action.rs  game_result.rs
cherris-core/src/move_generator/: bishop.rs  castling.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs
cherris-core/src/table_gen/: attacks.rs  king.rs  knights.rs  mod.rs  pawns.rs  rays.rs  sliders.rs
cherris-core/src/uci/: option_params.rs  position_params.rs  register_params.rs  uci_engine_command.rs  uci_go_params.rs  uci_gui_command.rs  uci_option.rs  uci_search_info.rs
cherris-engine/: Cargo.toml
cherris-engine/benches/: search.rs
cherris-engine/src/: engine.rs  eval.rs  lib.rs  main.rs  search.rs  uci.rs
cherris-engine/src/engine/: engine_option.rs
cherris-engine/src/eval/: evaluation.rs  material.rs  psqt.rs
cherris-engine/src/search/: alpha_beta.rs  history.rs  iterative_deepening.rs  move_sort.rs  quiescence.rs  time_managment.rs  transposition_table.rs
cherris-game/: Cargo.toml
cherris-game/src/: game_ui.rs  lib.rs  main.rs
