[package]
name = "cherris-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cherris-core = { path = "../cherris-core" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "search"
harness = false

